@@ -1,5 +1,9 @@
 2009-07-04  Russ Allbery  <rra@stanford.edu>
 
+	* ANSIColor.pm: Add FAINT as a synonym for DARK and export it when
+	constants are requested.
+	* t/basic.t: Test faint and FAINT as a synonym for dark/DARK.
+
 	* ANSIColor.pm: Version 2.01 released.
 
 	* t/basic.t: Test error handling in color, colored, and uncolor.
